--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Con el avance de la <b>tecnologia y los geo localizadores</b> al alcance de todo
    que afectan al medio ambiente. ¿No te parece que es importante saber sobre ella a profundidad?    
 </p>
 <br>
-<img src="img/img0.jpg" width="720" align="center" alt="La Tierra">
+<img src="img0.jpg" width="720" align="center" alt="La Tierra">
 <hr>
 <h2>Importancia de la Geografia</h2>
 <h3><a href="index.html">Geografia fisica</a> | <a href="humana.html">Geografia humana</a> | 
@@ -73,11 +73,11 @@ Con el avance de la <b>tecnologia y los geo localizadores</b> al alcance de todo
     del transporte, la geografia economica (industrial, sector servicios, turistica, politica, social, gerontologica, historia, geografia rural, geografia urbana y la geografia cultural):
 </p>
 <br>
-<img src="img/img1.jpg">
+<img src="img1.jpg">
 <hr>
 <p>Siguenos en:</p>
-    <a href="https://www.facebook.com" target="_blank"><img src="img/facebook.png" class="ico"></a>
-    <a href="https://www.twitter.com" target="_blank"><img src="img/twiter.png" class="ico"></a>
-    <a href="https://www.youtube.com" target="_blank"><img src="img/youtube(1).png" class="ico"></a>
+    <a href="https://www.facebook.com" target="_blank"><img src="facebook.png" class="ico"></a>
+    <a href="https://www.twitter.com" target="_blank"><img src="twiter.png" class="ico"></a>
+    <a href="https://www.youtube.com" target="_blank"><img src="youtube(1).png" class="ico"></a>
 </body>
 </html>
